fix compiler warning (bug 202716)